--- a/src/components/TicTacToe/TicTacToe.module.css
+++ b/src/components/TicTacToe/TicTacToe.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 25px;
+    gap: 15px;
 }
 
 .board {
@@ -37,4 +37,48 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/* For Larger Screens */
+@media (min-width: 481px) {
+    h2 {
+        font-size: 2em;
+    }
+
+    h3 {
+        font-size: 1.5em;
+    }
+
+    .board {
+        grid-template-columns: 150px 150px 150px;
+        grid-template-rows: 150px 150px 150px;
+    }
+
+    .actions {
+        width: 75%;
+        gap: 30px;
+    }
+
+    .actionBtn {
+        padding: 15px 30px;
+        font-size: 18px;
+        font-weight: 600;
+    }
+}
+
+/* For high res screens (Ex: iPad Pro) */
+@media (min-height: 801px) {
+    h2 {
+        font-size: 2.5em;
+    }
+
+    h3 {
+        font-size: 1.75em;
+    }
+
+    .actionBtn {
+        padding: 20px 30px;
+        font-size: 22px;
+        font-weight: 600;
+    }
 }
