--- a/src/components/Tile/Tile.module.css
+++ b/src/components/Tile/Tile.module.css
@@ -10,3 +10,10 @@
     width: 50px;
     height: 50px;
 }
+
+@media (min-width: 481px) {
+    .tileImg {
+        width: 75px;
+        height: 75px;
+    }
+}
